--- a/Simple_Web_Scraper/BeautifulSoup_Request.ipynb
+++ b/Simple_Web_Scraper/BeautifulSoup_Request.ipynb
@@ -9,6 +9,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from requests import Request, Session\n",
+    "from requests.exceptions import ConnectionError, Timeout, TooManyRedirects\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "url = 'https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest'\n",
+    "parameters = {\n",
+    "'start':'1',\n",
+    "'limit':'100',\n",
+    "'convert':'USD'\n",
+    "}\n",
+    "headers = {\n",
+    "'Accepts': 'application/json',\n",
+    "'X-CMC_PRO_API_KEY': '66b66fa9-77d6-4dae-875f-3a878547e5c3',\n",
+    "}\n",
+    "\n",
+    "session = Session()\n",
+    "session.headers.update(headers)\n",
+    "\n",
+    "try:\n",
+    "    response = session.get(url, params=parameters)\n",
+    "    data = json.loads(response.text)\n",
+    "    #print(data)\n",
+    "except (ConnectionError, Timeout, TooManyRedirects) as e:\n",
+    "    print(e)\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "\n",
+    "df = pd.json_normalize(data['data'])\n",
+    "df['timestamp'] = pd.to_datetime('now')\n",
+    "\n",
+    "df = pd.json_normalize(data['data'])\n",
+    "df['timestamp'] = pd.to_datetime('now')\n",
+    "df\n",
+    "\n",
+    "if not os.path.isfile(r'E:\\DataEngineer\\ScrapData\\API.csv'):\n",
+    "    df.to_csv(r'E:\\DataEngineer\\ScrapData\\Cryptocurrentcy.csv', header='column_names')\n",
+    "else:\n",
+    "    df.to_csv(r'E:\\DataEngineer\\ScrapData\\Cryptocurrentcy.csv',mode='a',header=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df3 = df.groupby('name', sort=False)[['quote.USD.percent_change_1h','quote.USD.percent_change_24h','quote.USD.percent_change_7d','quote.USD.percent_change_30d','quote.USD.percent_change_60d','quote.USD.percent_change_90d']].mean()\n",
+    "\n",
+    "df4 = df3.stack()\n",
+    "df5 = df4.to_frame(name='values')\n",
+    "df6 = df5.reset_index()\n",
+    "\n",
+    "df7 = df6.rename(columns={'level_1': 'percent_change'})\n",
+    "df7['percent_change'] = df7['percent_change'].replace(['quote.USD.percent_change_24h','quote.USD.percent_change_7d','quote.USD.percent_change_30d','quote.USD.percent_change_60d','quote.USD.percent_change_90d'],['24h','7d','30d','60d','90d'])\n",
+    "df7\n",
+    "#df7.query(\"name == 'Bitcoin'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
